--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,21 @@
     <string name="app_name">NinerAuth</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="first_fragment_label">Login Fragment</string>
+    <string name="second_fragment_label">Registration Fragment</string>
+    <string name="profile_fragment_label">Profile Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+
+    <string name="email_edittext_hint">Email</string>
+    <string name="password_edittext_hint">Password</string>
+    <string name="first_name_edittext_hint">First Name</string>
+    <string name="last_name_edittext_hint">Last Name</string>
+
+    <string name="login_button">Login</string>
+    <string name="registration_button">Register</string>
+    <string name="update_button">Update Profile</string>
+    <string name="logout_button">Logout</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
